# XAl-on-healthcare-diagnostics

./: .gitattributes  .gitignore  README.md  feature-selection.ipynb  feature.html  feature.js  pyproject.toml
version 1.0/: custom.tpl  feature.html
version 2.0/: XAI_tabular.ipynb
version_2.0/: NonXAI_tabular.ipynb  XAI_tabular.ipynb  preprocessing.py
version_3.0/ml-xai/: baseline_model.ipynb  complex_models.ipynb  data_preprocess.ipynb  data_preprocess.py  decision_tree_model.pkl  deepl.ipynb  ensemble.ipynb  grayblack_models.ipynb  lightgbm_model.pkl  logistic_regression_model.pkl  mlp_model.h5  neural_network_model.pkl  random_forest_model.pkl  resamp_training_data.csv  whitebox_model.ipynb  xgboost_model.pkl
version_3.0/non-xai/: baseline_model.ipynb  complex_models.ipynb  data_preprocess.ipynb  decision_tree_model.pkl  deepl.ipynb  ensemble.ipynb  lightgbm_model.pkl  logistic_regression_model.pkl  mlp_model.h5  neural_network_model.pkl  random_forest_model.pkl  xgboost_model.pkl
version_3.0/sci-xai/: baseline_models.ipynb  blackbox.ipynb  data_preprocess.ipynb  data_preprocess.py  ensembleM.ipynb  resamp_test_data.csv  resamp_training_data.csv  test_data.csv  train_data.csv  whitebox.ipynb  whitebox_enc.ipynb
version_3.0/xai/: baseline_models.ipynb  complex_models.ipynb  data_preprocess.ipynb  data_preprocess.py  deepl.ipynb  ensemble.ipynb  processed_stroke_data_test.csv  processed_stroke_data_train.csv
xai/: pyvenv.cfg
xai/Scripts/: activate  activate.bat  get_gprof  get_objgraph  numba  undill
