[project]
name = "xai"
version = "0.1.0"
description = ""
authors = [
    {name = "zen`",email = "wintertemper479@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shap (>=0.47.2,<0.48.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "interpret (>=0.6.10,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
